.. Author notes: this file is formatted with restructured text
  (http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
  as it is included in Finagle's user's guide.

6.x
-----

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-mux: `c.t.f.mux.lease.exp.WindowedByteCounter` no longer
    calls `Thread.start()` in its constructor. This should be now be
    done by the caller.

Deprecations
~~~~~~~~~~~~

 * finagle-core: Deprecated the mechanisms of FailureAccrual that use
   factory Transformers.  It's better to just use the Params to
   configure the existing FailureAccrualFactory.  However, if you've
   actually written your own failure accrual transformer that's
   significantly different, then you can do stack.replace() to swap it
   in.

 * finagle-memcached: Have cas() operation return false on NotFound()
   state instead of throw IllegalStateException

New Features
~~~~~~~~~~~~

  * finagle-core: All `Stack.Param`s used in `ClientBuilder` and
    `ServerBuilder` are now publicly exposed for configuration
    parity.

  * finagle-mux: Drain mux servers properly, so that shutdowns can be
    graceful.

6.23.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-core: `c.t.f.Stackable`s maintained state about which parameters were
    accessed via `get`. This was error prone and violated the assumption that `Stack`s
    are immutable data structures. We removed this in favor of annotating modules with
    parameters. The abstract classes for Stackables were also simplified. Now we only have
    `Module` and `ModuleN` variants which are more convenient for most definitions.
    Since this is an advanced API, it should not impact standard usage of finagle.
  * finagle-core: Update ConcurrentRingBuffer to use ClassTag instead of ClassManifest;
    rename size argument to capacity.

Deprecations
~~~~~~~~~~~~

  * `ServerBuilder.stack[Req1, Rep1](mk: Stack.Params => Server[Req1, Rep1])` is
    deprecated in favor of