@@ -8,6 +8,7 @@ import com.twitter.finagle.transport.Transport
 import com.twitter.io.{Reader, Buf, BufReader}
 import com.twitter.util.{Future, Promise, Throw, Return}
 import java.net.InetSocketAddress
+import org.jboss.netty.handler.codec.frame.TooLongFrameException
 import org.jboss.netty.handler.codec.http._
 
 class HttpServerDispatcher[REQUEST <: Request](
@@ -21,7 +22,32 @@ class HttpServerDispatcher[REQUEST <: Request](
     service.close()
   }
 
+  private[this] def BadRequestResponse =
+    Response(HttpVersion.HTTP_1_0, HttpResponseStatus.BAD_REQUEST)
+
+  private[this] def RequestUriTooLongResponse =
+    Response(HttpVersion.HTTP_1_0, HttpResponseStatus.REQUEST_URI_TOO_LONG)
+
+  private[this] def RequestHeaderFieldsTooLarge =
+    Response(HttpVersion.HTTP_1_0, HttpResponseStatus.REQUEST_HEADER_FIELDS_TOO_LARGE)
+
   protected def dispatch(m: Any, eos: Promise[Unit]) = m match {
+    case badReq: BadHttpRequest =>
+      eos.setDone()
+      val response = badReq.exception match {
+        case ex: TooLongFrameException =>
+          // this is very brittle :(
+          if (ex.getMessage().startsWith("An HTTP line is larger than "))
+            RequestUriTooLongResponse
+          else
+            RequestHeaderFieldsTooLarge
+        case _ =>
+          BadRequestResponse
+      }
+      // The connection in unusable, close it
+      HttpHeaders.setKeepAlive(response, false)
+      Future.value(response)
+
     case reqIn: HttpRequest =>
       val req = new Request {
         val httpRequest = reqIn
